--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         semesta yang bisa kita jangkau, namun dunia juga bisa di jawab dengan beberapa sudut pandang seperti secara ilmiah, filosofi, agama dan lainya seperti berikut </h3>
         <ol>
             <h2 style="text-align: center">
-                <a href="i_lop_sekarayuanindita.html">Home</a> |
-                <a href="secara_ilmiah.html"> Secara ilmiah</a> |
-                <a href="menurut_filosofi.html">Menurut filosofi</a> |
-                <a href="menurut_agama.html">Menurut agama</a> |
-                <a href="menurut_aku.html">Menurut aku</a>
+                <a href="https://duniabagiku.github.io/dunia/">Home</a> |
+                <a href="https://duniabagiku.github.io/secara-ilmiah/"> Secara ilmiah</a> |
+                <a href="https://duniabagiku.github.io/menurut-filosofi/">Menurut filosofi</a> |
+                <a href="https://duniabagiku.github.io/menurut-agama/">Menurut agama</a> |
+                <a href="https://duniabagiku.github.io/menurut-aku/">Menurut aku</a>
             </h2> |
         </ol>
 </body>
